# sk150c-kit

./: .gitignore  .markdownlint-cli2.yaml  Cargo.toml  DEVELOPER_GUIDE.md  DEVELOPER_GUIDE.zh.md  Makefile  README.md  README.zh.md  commitlint.config.cjs  lefthook.yml  sk150c-kit.ioc  test_button_standalone  test_button_standalone.rs
.cargo/: config.toml
.github/workflows/: ci.yml
docs/: hardware-guide.md  software_design_notes.md
models/: CHANGELOG.md  CHANGELOG.zh.md  README.md  README.zh.md  sk150c-shell-BodyBackCover.step  sk150c-shell-BodyBackCover_Rev1.2.step  sk150c-shell-BodyMain.step  sk150c-shell-BodyMain_Rev1.1.step  sk150c-shell-BodyMain_Rev1.2.step
scripts/: setup-dev.sh
src/: adc_reader.rs  app_manager.rs  button.rs  comp.rs  config_manager.rs  fan_manager.rs  main.rs  power.rs  power_output.rs  shared.rs  types.rs  usb.rs  vbus_manager.rs
src/button/: button_internal.rs  mock_impl.rs  real_impl.rs  tests.rs  traits.rs
src/tests/: mod.rs  system_state_tests.rs
